Updating support library version and trying fix travis file

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ android:
     - platform-tools
     - build-tools-23.0.3
     - android-23
+    - extra-android-m2repository
 
 script:
    - ./gradlew clean build
