--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,19 @@
 language: android
+
 android:
   components:
     - platform-tools
     - build-tools-23.0.3
     - android-23
     - extra-android-m2repository
+
+before_cache:
+  - find $HOME/.gradle/caches -name "*.lock" -delete
+
+cache:
+  directories:
+    - $HOME/.gradle/caches/
+    - $HOME/.gradle/wrapper/
 
 script:
    - ./gradlew clean build
