--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,7 @@ dependencies {
 
     // - Rx dependencies
     compile 'io.reactivex:rxandroid:1.1.0'
+    compile 'io.reactivex:rxjava:1.0.14'
     compile 'io.reactivex:rxkotlin:0.40.1'
 
     // - Test dependencies
