--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'kotlin-android-extensions'
 
 android {
 
-    compileSdkVersion 23
+    compileSdkVersion 24
     buildToolsVersion "23.0.3"
 
     defaultConfig {
@@ -21,6 +21,12 @@ android {
     buildTypes {
 
         release {
+
+            minifyEnabled false
+            proguardFiles 'proguard-rules.pro'
+        }
+
+        debug {
 
             minifyEnabled false
             proguardFiles 'proguard-rules.pro'
@@ -48,28 +54,30 @@ dependencies {
 
     // - Kotlin dependencies including Anko
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    compile 'org.jetbrains.anko:anko-support-v4:0.8.2'
 
     // - Android basic dependencies
     compile "com.android.support:appcompat-v7:$support_library_version"
     compile "com.android.support:design:$support_library_version"
     compile "com.android.support:recyclerview-v7:$support_library_version"
 
+    // Butter Knife
+    compile group: 'com.jakewharton', name: 'butterknife', version: '1.2.2'
+
     // - Dagger 2 dependencies
     compile 'com.google.dagger:dagger:2.2'
     kapt 'com.google.dagger:dagger-compiler:2.2'
-    provided 'org.glassfish:javax.annotation:10.0-b28'
+    provided group: 'org.glassfish', name: 'javax.annotation', version: '10.0-b28'
 
     // - Networking dependencies
-    compile 'com.squareup.retrofit:retrofit:2.0.0-beta2'
-    compile 'com.squareup.retrofit:converter-gson:2.0.0-beta2'
-    compile 'com.squareup.retrofit:adapter-rxjava:2.0.0-beta2'
-    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile group: 'com.squareup.retrofit2', name: 'retrofit', version: '2.1.0'
+    compile group: 'com.squareup.retrofit2', name: 'converter-gson', version: '2.1.0'
+    compile group: 'com.squareup.retrofit2', name: 'adapter-rxjava', version: '2.1.0'
+    compile group: 'com.squareup.picasso', name: 'picasso', version: '2.5.2'
 
     // - Rx dependencies
-    compile 'io.reactivex:rxandroid:1.1.0'
-    compile 'io.reactivex:rxjava:1.0.14'
-    compile 'io.reactivex:rxkotlin:0.40.1'
+    compile group: 'io.reactivex', name: 'rxandroid', version: '1.2.1'
+    compile group: 'io.reactivex', name: 'rxjava', version: '1.1.6'
+    compile group: 'io.reactivex', name: 'rxkotlin', version: '0.60.0'
 
     // - Test dependencies
     androidTestCompile 'commons-io:commons-io:2.4'
