--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,9 @@ android:
     - android-24
     - extra-android-m2repository
 
+env:
+   - JDK=oraclejdk8
+
 before_cache:
   - find $HOME/.gradle/caches -name "*.lock" -delete
 
