Updating JDK on travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 language: android
 
+jdk:
+  - oraclejdk8
+
 android:
   components:
     - platform-tools
@@ -7,9 +10,6 @@ android:
     - build-tools-24.0.0
     - android-24
     - extra-android-m2repository
-
-env:
-   - JDK=oraclejdk8
 
 before_cache:
   - find $HOME/.gradle/caches -name "*.lock" -delete
