--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ android:
     - tools
     - build-tools-24.0.0
     - android-24
+    - extra-android-support
     - extra-android-m2repository
 
 before_cache:
