--- a/build.gradle
+++ b/build.gradle
@@ -12,11 +12,11 @@ buildscript {
 
     dependencies {
 
-        classpath 'com.android.tools.build:gradle:2.1.0'
+        classpath 'com.android.tools.build:gradle:2.1.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jetbrains.kotlin:kotlin-android-extensions:$kotlin_version"
         classpath 'io.fabric.tools:gradle:1.21.5'
-        classpath 'com.google.gms:google-services:1.5.0-beta2'
+        classpath 'com.google.gms:google-services:3.0.0'
     }
 }
 
