--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,9 @@ android:
     - build-tools-24.0.0
     - android-24
     - extra-android-support
+    - extra-google-google_play_services
     - extra-android-m2repository
+    - extra-google-m2repository
 
 before_cache:
   - find $HOME/.gradle/caches -name "*.lock" -delete
