--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".view.activity.PreviewActivity"
+            android:name=".activity.PreviewActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme">
             <intent-filter>
