--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,7 +89,7 @@ dependencies {
     compile group: 'com.malinskiy', name: 'superrecyclerview', version: '1.1.4'
 
     // - Label View
-    compile 'com.flyco.labelview:FlycoLabelView_Lib:1.0.2@aar'
+    compile 'com.github.linger1216:labelview:v1.1.0'
 
     // - Dagger 2 dependencies
     compile group: 'com.google.dagger', name: 'dagger', version: '2.2'
