--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
 
         <activity
             android:name=".activity.PreviewActivity"
+            android:configChanges="orientation|keyboardHidden|keyboard|screenSize"
             android:label="@string/app_name"
             android:theme="@style/AppTheme">
             <intent-filter>
@@ -25,12 +26,20 @@
         </activity>
 
         <activity
-            android:name=".activity.SplashScreenActivity"
-            android:theme="@style/FullscreenTheme" />
+            android:name=".activity.SettingsActivity"
+            android:configChanges="orientation|keyboardHidden|keyboard|screenSize"
+            android:label="@string/action_settings"
+            android:theme="@style/AppTheme" />
 
         <activity
-            android:name=".activity.SettingsActivity"
-            android:label="@string/action_settings"
+            android:name=".activity.AboutActivity"
+            android:configChanges="orientation|keyboardHidden|keyboard|screenSize"
+            android:label="@string/about"
+            android:theme="@style/AppTheme" />
+
+        <activity
+            android:name=".activity.SplashScreenActivity"
+            android:configChanges="orientation|keyboardHidden|keyboard|screenSize"
             android:theme="@style/FullscreenTheme" />
 
         <!--
