--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,11 +33,11 @@
         <activity
             android:name=".activity.PreviewActivity"
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme">
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -45,19 +45,16 @@
         <activity
             android:name=".activity.SettingsActivity"
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize"
-            android:label="@string/action_settings"
-            android:theme="@style/AppTheme" />
+            android:label="@string/action_settings" />
 
         <activity
             android:name=".activity.AboutActivity"
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize"
-            android:label="@string/about"
-            android:theme="@style/AppTheme" />
+            android:label="@string/about" />
 
         <activity
             android:name=".activity.PostActivity"
-            android:configChanges="orientation|keyboardHidden|keyboard|screenSize"
-            android:theme="@style/AppTheme" />
+            android:configChanges="orientation|keyboardHidden|keyboard|screenSize" />
 
         <activity
             android:name=".activity.SplashScreenActivity"
