Some fixes of night mode

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,6 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'io.fabric'
-apply plugin: 'com.google.gms.google-services'
 
 android {
 
@@ -120,10 +119,15 @@ dependencies {
     }
 
     // - Analytics
-    compile group: 'com.google.android.gms', name: 'play-services-analytics', version: '9.0.0'
+    compile group: 'com.google.android.gms', name: 'play-services-analytics', version: '9.0.1'
+
+    // - Firebase
+    compile group: 'com.google.firebase', name: 'firebase-messaging', version: '9.0.1'
 
     // - Test dependencies
     androidTestCompile group: 'commons-io', name: 'commons-io', version: '2.4'
     androidTestCompile group: 'com.android.support.test', name: 'testing-support-lib', version: '0.1'
     androidTestCompile group: 'com.android.support.test.espresso', name: 'espresso-core', version: '2.0'
 }
+
+apply plugin: 'com.google.gms.google-services'
