Removing splash screen and general improvements

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,10 +56,12 @@
             android:name=".activity.PostActivity"
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize" />
 
-        <activity
-            android:name=".activity.SplashScreenActivity"
-            android:configChanges="orientation|keyboardHidden|keyboard|screenSize"
-            android:theme="@style/FullscreenTheme" />
+        <receiver android:name=".receiver.NetworkStateChangeReceiver">
+            <intent-filter>
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
+                <action android:name="android.net.wifi.WIFI_STATE_CHANGED" />
+            </intent-filter>
+        </receiver>
 
         <!--
           Optionally, register AnalyticsReceiver and AnalyticsService to support background
