--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,13 +23,14 @@ android {
 
         release {
 
+            useProguard false
             minifyEnabled false
+            zipAlignEnabled false
             proguardFiles 'proguard-rules.pro'
         }
 
         debug {
 
-            minifyEnabled false
             proguardFiles 'proguard-rules.pro'
         }
     }
