--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,18 +15,18 @@ android {
         minSdkVersion 15
         targetSdkVersion 24
 
-        versionCode 1
-        versionName "1.0.0"
+        versionCode 2
+        versionName "1.0.1"
     }
 
     signingConfigs {
 
         release {
 
-            storeFile file(GZMD_STORE_FILE)
-            storePassword GZMD_STORE_PASSWORD
-            keyAlias GZMD_STORE_KEY_ALIAS
-            keyPassword GZMD_KEY_PASSWORD
+            storeFile file(System.getenv("GZMD_STORE_FILE"))
+            storePassword System.getenv("GZMD_STORE_PASSWORD")
+            keyAlias System.getenv("GZMD_STORE_KEY_ALIAS")
+            keyPassword System.getenv("GZMD_KEY_PASSWORD")
         }
     }
 
