--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
 
-    ext.kotlin_version = '1.0.2-1'
+    ext.kotlin_version = '1.0.3'
     ext.support_library_version = '24.0.0'
 
     repositories {
